--- a/src/backend/web/templates/index/index_kickoff.html
+++ b/src/backend/web/templates/index/index_kickoff.html
@@ -39,13 +39,16 @@
       <p><a class="btn btn-default btn-block" href="https://www.facebook.com/events/{{kickoff_facebook_fbid}}" target="_blank"><span class="glyphicon glyphicon-calendar"></span> RSVP on Facebook</a></p>
       {% endif %}
       <div>
+        <a class="btn btn-default" href="https://www.firstinspires.org/covid-19" target="_blank"><span class="glyphicon glyphicon-info-sign"></span> <i>FIRST</i> COVID-19 Resources</a>
+        <a class="btn btn-default" href="https://www.firstinspires.org/robotics/frc/game-and-season" target="_blank"><span class="glyphicon glyphicon-info-sign"></span> <i>FIRST</i> 2021 Game and Season Resources</a>
+        <a class="btn btn-default" href="https://www.firstinspires.org/sites/default/files/uploads/resource_library/frc/game-and-season-info/competition-manual/2021/2021-frc-season-details.pdf" target="_blank"><span class="glyphicon glyphicon-info-sign"></span> <i>FIRST</i> 2021 Season Details</a>
         <!--<span class="glyphicon glyphicon-globe"></span> <a href="http://www.firstinspires.org/2018-frc-teaser" target="_blank" title="FIRST Kickoff Page"><em>FIRST</em> Kickoff Page</a><br> -->
         <!-- <a class="hashtag-link hashtag-cd" href="https://www.chiefdelphi.com/forums/showthread.php?threadid=138575" target="_blank" title="Chief Delphi Discussion Thread">Chief Delphi Game Hint Thread</a><br> -->
         <!--<span class="glyphicon glyphicon-info-sign"></span> <a href="#" target="_blank">Download {{kickoff_datetime_est|strftime("%Y")}} Game Manual</a><br />-->
-        <br>
+        <!--<br>
         <div class="fitvids">
           <iframe width="420" height="315" src="https://www.youtube.com/embed/{{game_teaser_youtube_id}}" frameborder="0" allowfullscreen></iframe>
-        </div>
+        </div>-->
       </div>
     </div>
     <!-- <div class="col-sm-4">
