port match video suggestion review

--- a/src/backend/web/templates/suggestions/suggest_match_video_review_list.html
+++ b/src/backend/web/templates/suggestions/suggest_match_video_review_list.html
@@ -26,7 +26,7 @@
             </div><br>
 
             {% for suggestion, event in suggestions_and_events %}
-            <div class="row">
+            <div class="row" class="suggestion-item">
                 <div class="well">
                     <div class="col-xs-2">
                         {% if event.has_first_official_webcast %}
