port team media suggestion review

--- a/src/backend/web/templates/suggestions/suggest_team_media_review_list.html
+++ b/src/backend/web/templates/suggestions/suggest_team_media_review_list.html
@@ -67,7 +67,7 @@
           </div><br>
 
           {% for suggestion, reference, preferred in suggestions_and_references_and_preferred %}
-          <div class="row">
+          <div class="row" class="suggestion-item">
               <div class="well">
                   <div class="col-xs-2">
                     <label class="radio text-success">
