--- a/src/backend/web/templates/suggestions/suggest_event_webcast_review_list.html
+++ b/src/backend/web/templates/suggestions/suggest_event_webcast_review_list.html
@@ -43,23 +43,23 @@
             </div>
             {% endif %}
 
-            {% include "admin/partials/webcast_add_instructions_partial.html" %}
+            {% include "suggestions/partials/webcast_add_instructions_partial.html" %}
 
             {% for suggestion_set in suggestion_sets %}
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <form action="/suggest/event/webcast/review" method="post" id="reject_all_{{ suggestion_set.event.key_name }}">
-                            <input type="hidden" name="suggestion_keys" value="{% for suggestion in suggestion_set.suggestions %}{{suggestion.key.id}}{% if not forloop.last %},{% endif %}{% endfor %}" />
+                            <input type="hidden" name="suggestion_keys" value="{% for suggestion in suggestion_set.suggestions %}{{suggestion.key.id()}}{% if not loop.last %},{% endif %}{% endfor %}" />
                             <input type="hidden" name="event_key" value="{{suggestion_set.event.key_name}}" />
                             <button type="submit" class="btn btn-xs btn-danger pull-right" name="verdict" value="reject_all"><span class="glyphicon glyphicon-thumbs-down"></span> Reject All</button>
                         </form>
-                        <h3 class="panel-title"><a href="/event/{{suggestion_set.event.key_name}}">{{suggestion_set.event.name}} ({{suggestion_set.event.start_date|date:"M jS"}} - {{suggestion_set.event.end_date|date:"M jS"}})</a></h3>
+                        <h3 class="panel-title"><a href="/event/{{suggestion_set.event.key_name}}">{{suggestion_set.event.name}} ({{suggestion_set.event.start_date.strftime("M jS")}} - {{suggestion_set.event.end_date.strftime("M jS")}})</a></h3>
                     </div>
                     <div class="panel-body">
                         <ul><strong>Existing Webcasts</strong>
                         {% for webcast in suggestion_set.event.webcast %}
                             <li>{{webcast}}</li>
-                        {% empty %}
+                        {% else %}
                             <li>None Yet!</li>
                         {% endfor %}
                         </ul>
@@ -71,16 +71,16 @@
                                 <div class="row">
                                     <div class="col-xs-6">
                                         <p><strong><a href="{{suggestion.contents.webcast_url}}" target="_blank">{{suggestion.contents.webcast_url}}</a></strong></p>
-                                        <form action="/suggest/event/webcast/review" method="post" id="review_{{ suggestion.key.id }}">
+                                        <form action="/suggest/event/webcast/review" method="post" id="review_{{ suggestion.key.id() }}">
                                             {% if suggestion.webcast_template %}
-                                                {% with suggestion.contents.webcast_dict as webcast %}
+                                                {% set webcast = suggestion.contents['webcast_dict'] %}
                                                 <div style="height:300px;">
                                                 {% include suggestion.webcast_template %}
                                                 </div>
                                                 <table class="table table-striped table-hover table-condensed">
                                                     <tr>
                                                         <td>Type</td>
-                                                        <td>{% include "admin/partials/webcast_type_select.html" %}</td>
+                                                        <td>{% include "suggestions/partials/webcast_type_select.html" %}</td>
                                                     </tr>
                                                     <tr>
                                                         <td>Channel</td>
@@ -95,18 +95,17 @@
                                                         <td><input type="text" name="webcast_date" value="{% if suggestion.contents.webcast_date%}{{suggestion.contents.webcast_date}}{% endif %}" /></td>
                                                     </tr>
                                                 </table>
-                                                {% endwith %}
                                             {% else %}
-                                                {% include "admin/partials/webcast_add_form_partial.html" %}
+                                                {% include "suggestions/partials/webcast_add_form_partial.html" %}
                                             {% endif %}
-                                            <input type="hidden" name="suggestion_key" value="{{suggestion.key.id}}" />
+                                            <input type="hidden" name="suggestion_key" value="{{suggestion.key.id()}}" />
                                             <input type="hidden" name="event_key" value="{{suggestion.target_key}}" />
                                             <button type="submit" class="btn btn-primary" name="verdict" value="accept"><span class="glyphicon glyphicon-thumbs-up"></span> Add Webcast</button> <button type="submit" class="btn btn-danger" name="verdict" value="reject"><span class="glyphicon glyphicon-thumbs-down"></span> Reject</button>
                                         </form>
                                     </div>
                                     <div class="col-xs-6">
                                         <ul>
-                                            <li>{{ suggestion.key.id }}</a></li>
+                                            <li>{{ suggestion.key.id() }}</a></li>
                                             <li>{{ suggestion.author.get.email }}</a></li>
                                             <li>{{ suggestion.author.get.nickname }}</a></li>
                                             <li>{{ suggestion.target_model }}:{{ suggestion.target_key }}</li>
@@ -118,7 +117,7 @@
                         {% endfor %}
                     </ul>
                 </div>
-            {% empty %}
+            {% else %}
                 <div class="row">
                     <div class="well">
                         <p>No suggestions! Go build more community!</p>
