--- a/src/backend/web/templates/suggestions/suggest_designs_review.html
+++ b/src/backend/web/templates/suggestions/suggest_designs_review.html
@@ -27,7 +27,7 @@
           </div><br>
 
           {% for suggestion, reference in suggestions_and_references %}
-          <div class="row">
+          <div class="row" class="suggestion-item">
               <div class="well">
                   <div class="col-xs-2">
                     <label class="radio text-success">
