--- a/src/backend/web/templates/suggestions/suggest_offseason_event_review_list.html
+++ b/src/backend/web/templates/suggestions/suggest_offseason_event_review_list.html
@@ -69,7 +69,7 @@
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row" id="review_offseasons">
     <div class="col-xs-12">
       {% for suggestion_id, event in events_and_ids %}
         <div class="well">
