Prefix css/js url for py3

--- a/src/backend/web/templates/base.html
+++ b/src/backend/web/templates/base.html
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" href="/icons/favicon.ico">
   <meta name="msapplication-config" content="/icons/browserconfig.xml">
 
-  {% block main_style %}<link rel="stylesheet" href="/css/tba_combined_style.main.min.css">{% endblock %}
+  {% block main_style %}<link rel="stylesheet" href="/py3_css/tba_combined_style.main.min.css">{% endblock %}
   {% block font_awesome_css %}<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">{% endblock %}
   {% block featherlight_css %}
   <link href="//cdnjs.cloudflare.com/ajax/libs/featherlight/1.3.5/featherlight.min.css" rel="stylesheet">
@@ -199,7 +199,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/featherlight/1.3.5/featherlight.gallery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/bootstrap-select.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/vis/4.19.1/vis.min.js"></script>
-<script src="/javascript/tba_combined_js.main.min.js"></script>
+<script src="/py3_javascript/tba_combined_js.main.min.js"></script>
 {% endblock %}
 
 {% block inline_javascript %}{% endblock %}
