Fix issues with less 4.0 [clowntown]

--- a/static/css/less_css/less/tba/tba_navbar.less
+++ b/static/css/less_css/less/tba/tba_navbar.less
@@ -49,7 +49,7 @@
 }
 
 .tba-navbar-logo-link {
-  @minus-amt: (@logo-height - @navbar-height) / 2;
+  @minus-amt: ((@logo-height - @navbar-height) / 2);
   float: left;
   overflow: visible;
   height: @navbar-height + @minus-amt;
