--- a/templates/admin/event_edit.html
+++ b/templates/admin/event_edit.html
@@ -72,7 +72,7 @@
         </tr>
         <tr>
             <td>Event Venue Address</td>
-            <td><textarea name="venue_address" />{{event.venue_address}}</textarea>
+            <td><textarea name="venue_address" />{{event.venue_address}}</td>
         </tr>
         <tr>
             <td>Event City</td>
