Revert "Remove code to create districts when fetching teams - rely on Events for Districts (#3265)"
This reverts commit 5bd5cc2c983a357518b1a8d5f9d8448d03eed880.

--- a/templates/datafeeds/usfirst_team_details_get.html
+++ b/templates/datafeeds/usfirst_team_details_get.html
@@ -22,6 +22,7 @@
         <li>Postal Code: {{team.postalcode}}</li>
         <li>Country: {{team.country}}</li>
         <li>Website: {{team.website}}</li>
+        <li>District: {{district}}</li>
         <li>Robot: {{robot}}</li>
     </ul>
     {% else %}
