--- a/src/backend/web/templates/index/index_buildseason.html
+++ b/src/backend/web/templates/index/index_buildseason.html
@@ -11,12 +11,12 @@
       {% include "index_partials/index_lhc.html" %}
     </div>
     <div class="col-sm-7 col-lg-8">
-      <h2>
+      <!-- <h2>
         <div id="countdown-finish-time">{{seasonstart_datetime_utc|isoformat}}</div>
         <span class="countdown-number countdown-days">--</span><span class="countdown-label day-label"> Days </span>
         Until Week 1 Starts!
        <br>
-       <small>Official events start on {{seasonstart_datetime_utc|strftime("%B %-d%t")}}</small></h2>
+       <small>Official events start on {{seasonstart_datetime_utc|strftime("%B %-d%t")}}</small></h2> -->
       <div class="btn-group game-manual">
         <a class="btn btn-default" href="http://www.firstinspires.org/resource-library/frc/competition-manual-qa-system" target="_blank"><span class="glyphicon glyphicon-file"></span> {{game_name}} Game Manual and Materials</a>
       </div>
@@ -44,17 +44,17 @@
       </div>
       {% endif %}
 
-      {% if events %}
+      <!-- {% if events %}
         <h2>This Week's Events</h2>
         {% include "event_partials/event_table.html" %}
         <div>
           <a class="btn btn-default" href="/webcasts"><span class="glyphicon glyphicon-info-sign"></span> Add Webcasts</a>
           <a class="btn btn-default" href="/add-data"><span class="glyphicon glyphicon-upload"></span> Add YouTube Videos</a>
         </div>
-      {% endif %}
+      {% endif %} -->
       <br>
       <div class="fitvids">
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/{{game_animation_youtube_id}}" frameborder="0" allowfullscreen></iframe>
+        <iframe width="420" height="315" src="https://www.youtube.com/embed/{{ game_animation_youtube_id }}" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </div>
