--- a/src/backend/web/templates/index/index_buildseason.html
+++ b/src/backend/web/templates/index/index_buildseason.html
@@ -11,12 +11,15 @@
       {% include "index_partials/index_lhc.html" %}
     </div>
     <div class="col-sm-7 col-lg-8">
-      <!-- <h2>
+      <!-- {% if seasonstart_datetime_utc %}
+      <h2>
         <div id="countdown-finish-time">{{seasonstart_datetime_utc|isoformat}}</div>
         <span class="countdown-number countdown-days">--</span><span class="countdown-label day-label"> Days </span>
         Until Week 1 Starts!
        <br>
-       <small>Official events start on {{seasonstart_datetime_utc|strftime("%B %-d%t")}}</small></h2> -->
+       <small>Official events start on {{seasonstart_datetime_utc|strftime("%B %-d%t")}}</small>
+     </h2>
+     {% endif %} -->
       <div class="btn-group game-manual">
         <a class="btn btn-default" href="http://www.firstinspires.org/resource-library/frc/competition-manual-qa-system" target="_blank"><span class="glyphicon glyphicon-file"></span> {{game_name}} Game Manual and Materials</a>
       </div>
@@ -26,21 +29,27 @@
 
       {% include "media_partials/live_special_webcast_partial.html" %}
 
-      {% if build_handler_show_ri3d != 'False' %}
+      <div>
+        <a class="btn btn-default" href="https://www.firstinspires.org/covid-19" target="_blank"><span class="glyphicon glyphicon-info-sign"></span> <i>FIRST</i> COVID-19 Resources</a>
+        <a class="btn btn-default" href="https://www.firstinspires.org/robotics/frc/game-and-season" target="_blank"><span class="glyphicon glyphicon-info-sign"></span> <i>FIRST</i> 2021 Game and Season Resources</a>
+        <a class="btn btn-default" href="https://www.firstinspires.org/sites/default/files/uploads/resource_library/frc/game-and-season-info/competition-manual/2021/2021-frc-season-details.pdf" target="_blank"><span class="glyphicon glyphicon-info-sign"></span> <i>FIRST</i> 2021 Season Details</a>
+      </div>
+
+      {% if build_handler_show_ri3d %}
       <p>
         <a class="btn btn-lg btn-success btn-block" href="/watch/ri3d"><span class="glyphicon glyphicon-play"></span> Watch Ri3D Live</a>
       </p>
       {% endif %}
 
-      {% if build_handler_show_teameventsearch == 'True' %}
+      {% if build_handler_show_teameventsearch %}
       <div>
         <a class="btn btn-lg btn-block btn-primary" href="/advanced_team_search"><span class="glyphicon glyphicon-search"></span> Search for Previous Successful Robots</a>
       </div>
       <br>
       {% endif %}
-      {% if build_handler_show_avatars == 'True' %}
+      {% if build_handler_show_avatars and seasonstart_datetime_utc %}
       <div>
-        <a class="btn btn-lg btn-block btn-primary" href="/avatars/{{seasonstart_datetime_utc|strftime("%Y")}}"><span class="glyphicon glyphicon-user"></span> View All {{seasonstart_datetime_utc|strftime("%Y")}} Team Avatars</a>
+        <a class="btn btn-lg btn-block btn-primary" href="/avatars/{{ year }}"><span class="glyphicon glyphicon-user"></span> View All {{ year }} Team Avatars</a>
       </div>
       {% endif %}
 
