--- a/src/backend/web/templates/live_teams_partial.html
+++ b/src/backend/web/templates/live_teams_partial.html
@@ -14,7 +14,7 @@
                 {% if live_event.start_date %}<span class="glyphicon glyphicon-calendar"></span> {{ live_event.start_date|strftime("%b %d") }}{% if live_event.start_date|strftime("%b %d") != live_event.end_date|strftime("%b %d") %} - {{ live_event.end_date|strftime("%b %d") }}{% endif %}{{ live_event.end_date|strftime(", %Y") }}{% endif %}
             </p>
 
-            <table class="table table-striped table-condensed col-xs-11">
+            <table class="table table-striped table-condensed col-xs-11" id="live-teams">
                 <tr>
                     <th>Team Number</th>
                     <th>Team Name</th>
@@ -25,7 +25,7 @@
                     <th>Playoff Status</th>
                 </tr>
                 {% for team, status, status_str in team_statuses %}
-                    <tr>
+                    <tr id="live-team-{{live_event.key_name}}-{{team.key_name}}">
                         <td>{{ team.team_number }}</td>
                         <td>
                             <a href="/team/{{ team.team_number }}/{{ live_event.year }}#{{ live_event.key_name }}">{{ team.nickname }}</a>
