Add test to ensure API write token button is on account overview page

--- a/src/backend/web/templates/account_overview.html
+++ b/src/backend/web/templates/account_overview.html
@@ -205,7 +205,7 @@
   </div>
   <hr>
 
-  <div class="row">
+  <div id="api-write-keys-row" class="row">
     <div class="col-md-10 col-md-offset-1">
       <h2>Write API Keys</h2>
       <p>These keys grant volunteers planning events and working at the scoring table the ability to import offseason event data to TBA. <a href="request/apiwrite" class="btn btn-success pull-right"><span class="glyphicon glyphicon-plus-sign"></span> Request Tokens</a></p>
