--- a/src/backend/web/templates/account_overview.html
+++ b/src/backend/web/templates/account_overview.html
@@ -128,7 +128,7 @@
           </tr>
         </tbody>
       </table>
-      <p><a class="btn btn-primary" href="/account/mytba"><span class="glyphicon glyphicon-bookmark"></span> Manage myTBA</a></p>
+      <p><a class="btn btn-primary" href="{{ url_for('account.mytba') }}"><span class="glyphicon glyphicon-bookmark"></span> Manage myTBA</a></p>
     </div>
   </div>
   <hr>
