--- a/src/backend/web/templates/mytba.html
+++ b/src/backend/web/templates/mytba.html
@@ -46,9 +46,9 @@
       {% include "mytba_partials/mytba_settings.html" %}
 
       <ul class="nav nav-tabs nav-justified">
-        <li class="active"><a href="#my-teams" data-toggle="tab">My Teams <span class="badge">{{team_fav_subs|length}}</span></a></li>
-        <li><a href="#my-events" data-toggle="tab">My Events <span class="badge">{{event_fav_subs|length}}</span></a></li>
-        <li><a href="#my-matches" data-toggle="tab">My Matches <span class="badge">{{event_match_fav_subs|length}}</span></a></li>
+        <li class="active"><a href="#my-teams" data-toggle="tab">My Teams <span class="badge">{{team_fav_sub|length}}</span></a></li>
+        <li><a href="#my-events" data-toggle="tab">My Events <span class="badge">{{event_fav_sub|length}}</span></a></li>
+        <li><a href="#my-matches" data-toggle="tab">My Matches <span class="badge">{{event_match_fav_sub|length}}</span></a></li>
       </ul>
 
       <div class="tab-content">
@@ -57,7 +57,7 @@
 
           <input id="add-team-input" class="form-control" type="text" placeholder="Add Team by Name or Number">
 
-          {% if team_fav_subs %}
+          {% if team_fav_sub %}
             <table class="table table-striped">
               <tr>
                 <th>Number</th>
@@ -66,15 +66,15 @@
                 <th>Subscriptions</th>
                 <th>Edit</th>
               </tr>
-              {% for team, fav, subs in team_fav_subs %}
+              {% for team, fav, sub in team_fav_sub %}
               <tr>
                 <td>{{team.team_number}}</td>
-                <td><a href="/team/{{team.team_number}}">{{team.nickname}}</a></td>
+                <td><a href="/team/{{ team.team_number }}">{{ team.nickname }}</a></td>
                 <td>{% if fav %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
                 <td>
                   <ul style="padding-left: 0px;">
-                  {% for notification_name in subs.notification_names %}
-                    <li>{{notification_name}}</li>
+                  {% for notification_name in sub.notification_names %}
+                    <li>{{ notification_name }}</li>
                   {% endfor %}
                   </ul>
                 </td>
@@ -92,7 +92,7 @@
 
           <input id="add-event-input" class="form-control" type="text" placeholder="Add Event by Name">
 
-          {% if event_fav_subs %}
+          {% if event_fav_sub %}
             <table class="table table-striped">
               <tr>
                 <th>Event</th>
@@ -100,14 +100,14 @@
                 <th>Subscriptions</th>
                 <th>Edit</th>
               </tr>
-              {% for event, fav, subs in event_fav_subs %}
+              {% for event, fav, sub in event_fav_sub %}
               <tr>
-                <td><a href="/event/{{event.key.id()}}">{{event.year}} {{event.short_name}} [{{event.event_short.upper()}}]</a></td>
+                <td><a href="/event/{{ event.key.id() }}">{{ event.year }} {{ event.short_name }} [{{ event.event_short.upper() }}]</a></td>
                 <td>{% if fav %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
                 <td>
                   <ul style="padding-left: 0px;">
-                  {% for notification_name in subs.notification_names %}
-                    <li>{{notification_name}}</li>
+                  {% for notification_name in sub.notification_names %}
+                    <li>{{ notification_name }}</li>
                   {% endfor %}
                   </ul>
                 </td>
@@ -123,9 +123,9 @@
           <a class="btn btn-success pull-right" href="/account/mytba/add_hot_matches"><span class="glyphicon glyphicon-plus"></span> Subscribe to Hot Matches (Beta)</a>
           <h2>My Matches</h2>
 
-          {% if event_match_fav_subs %}
-            {% for event, match_fav_subs in event_match_fav_subs %}
-            <h3><a href="/event/{{event.key.id()}}">{{event.year}} {{event.short_name}}</a></h3>
+          {% if event_match_fav_sub %}
+            {% for event, match_fav_sub in event_match_fav_sub %}
+            <h3><a href="/event/{{ event.key.id() }}">{{ event.year }} {{ event.short_name }}</a></h3>
             <table class="table table-striped">
               <tr>
                 <th>Match</th>
@@ -133,14 +133,14 @@
                 <th>Subscriptions</th>
                 <th>Edit</th>
               </tr>
-              {% for match, fav, subs in match_fav_subs %}
+              {% for match, fav, sub in match_fav_sub %}
               <tr>
-                <td><a href="/match/{{match.key.id()}}">{{match.verbose_name}}</a></td>
+                <td><a href="/match/{{match.key.id()}}">{{ match.verbose_name }}</a></td>
                 <td>{% if fav %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
                 <td>
                   <ul style="padding-left: 0px;">
-                  {% for notification_name in subs.notification_names %}
-                    <li>{{notification_name}}</li>
+                  {% for notification_name in sub.notification_names %}
+                    <li>{{ notification_name }}</li>
                   {% endfor %}
                   </ul>
                 </td>
