--- a/src/backend/web/templates/mytba_team.html
+++ b/src/backend/web/templates/mytba_team.html
@@ -23,7 +23,6 @@
 
       <form method="post">
         <input name="action" type="hidden" value="subscription_year_add" />
-        <input name="account_id" type="hidden" value="{{ user.uid }}" />
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 
         <table class="table">
@@ -31,7 +30,7 @@
             <td>Favorite:</td>
             <td>
               <ul style="list-style-type: none;">
-                <li><input type="checkbox" name="favorite"{% if is_favorite %} checked{% endif %}/></li>
+                <li><input type="checkbox" name="is_favorite"{% if is_favorite %} checked{% endif %}/></li>
               </ul>
             </td>
           </tr>
