--- a/src/backend/web/templates/event_details.html
+++ b/src/backend/web/templates/event_details.html
@@ -155,7 +155,7 @@
         {% if matches.qm %}
         <div class="col-sm-6">
           <h3>Qualification Results</h3>
-          {{mtm.qual_match_table(matches)}}
+          {{mtm.qual_match_table(matches, playlist=qual_playlist)}}
         </div>
         {% endif %}
 
@@ -167,9 +167,9 @@
 
           <h3>{% if event.year >= 2015 %}Playoff{% else %}Elimination{% endif %} Results</h3>
           {% if event.playoff_type in double_elim_playoff_types %}
-            {{ mtm.double_elim_table(double_elim_matches) }}
+            {{mtm.double_elim_table(double_elim_matches, playlist=elim_playlist)}}
           {% else %}
-            {{mtm.elim_match_table(matches)}}
+            {{mtm.elim_match_table(matches, playlist=elim_playlist)}}
           {% endif %}
 
           {% if matches.qm %}
