--- a/src/backend/web/templates/match_partials/match_table_header.html
+++ b/src/backend/web/templates/match_partials/match_table_header.html
@@ -1,5 +1,16 @@
 <tr class="key visible-lg">
-  <th><span class="glyphicon glyphicon-play-circle" rel="tooltip" title="Matches with the play icon have videos to watch"></span></th>
+  <th>
+    {% if playlist %}<a href="{{playlist}}" title="Watch all videos"
+      ><span class="glyphicon glyphicon-play-circle"></span></a
+    >{% else %}
+    <span
+      class="glyphicon glyphicon-play-circle"
+      rel="tooltip"
+      title="Matches with the play icon have videos to watch"
+    ></span>
+    {% endif %}
+  </th>
+
   <th>Match</th>
   <th colspan="6">Red Alliance</th>
   <th colspan="6">Blue Alliance</th>
@@ -7,7 +18,17 @@
 </tr>
 
 <tr class="key hidden-lg">
-  <th rowspan="2"><span class="glyphicon glyphicon-play-circle" title="Matches with the play icon have videos to watch"></span></th>
+  <th rowspan="2">
+    {% if playlist %}<a href="{{playlist}}" title="Watch all videos"
+      ><span class="glyphicon glyphicon-play-circle"></span></a
+    >{% else %}
+    <span
+      class="glyphicon glyphicon-play-circle"
+      rel="tooltip"
+      title="Matches with the play icon have videos to watch"
+    ></span>
+    {% endif %}
+  </th>
   <th rowspan="2">Match</th>
   <th colspan="12">Red Alliance</th>
   <th colspan="2">Red Score</th>
