--- a/src/backend/web/templates/match_partials/match_table_macros.html
+++ b/src/backend/web/templates/match_partials/match_table_macros.html
@@ -1,7 +1,7 @@
 {% import "match_partials/match_table_row_macros.html" as mtrm %}
 {% import "match_partials/match_table_cell_macros.html" as mtcm %}
 
-{% macro qual_match_table(matches, cur_team_key=None) %}
+{% macro qual_match_table(matches, cur_team_key=None, playlist=None) %}
 <table class="match-table" id="qual-match-table">
   <thead>
     {% include "match_partials/match_table_header.html" %}
@@ -101,7 +101,7 @@
 </table>
 {% endmacro %}
 
-{% macro elim_match_table(matches, cur_team_key=None) %}
+{% macro elim_match_table(matches, cur_team_key=None, playlist=None) %}
 <table class="match-table" id="elim-match-table">
   <thead>
     {% include "match_partials/match_table_header.html" %}
@@ -139,18 +139,18 @@
 </table>
 {% endmacro %}
 
-{% macro double_elim_table(matches, cur_team_key=None) %}
+{% macro double_elim_table(matches, cur_team_key=None, playlist=None) %}
   {% if matches.winner %}
     <h4>Winner's Bracket</h4>
-    {{ elim_match_table(matches.winner) }}
+    {{ elim_match_table(matches.winner, playlist=playlist) }}
   {% endif %}
   {% if matches.loser%}
     <h4>Loser's Bracket</h4>
-    {{ elim_match_table(matches.loser) }}
+    {{ elim_match_table(matches.loser, playlist=playlist) }}
   {% endif %}
 {% endmacro %}
 
-{% macro full_match_table(matches, cur_team_key=None) %}
+{% macro full_match_table(matches, cur_team_key=None, playlist=None) %}
 <table class="match-table">
   <thead>
     {% include "match_partials/match_table_header.html" %}
