--- a/src/backend/web/templates/team_details.html
+++ b/src/backend/web/templates/team_details.html
@@ -182,7 +182,7 @@
               </div>
               <div class="col-sm-8" style="margin-top: 1em">
                 {% if comp.match_count > 0 %}
-                  {{mtm.full_match_table(comp.matches, cur_team_key=team.key.id())}}
+                  {{mtm.full_match_table(comp.matches, cur_team_key=team.key.id(), playlist=comp.playlist)}}
                 {% else %}
                   {% if comp.event.past %}
                     <p class="muted">No matches played.</p>
