Fix according to review

--- a/src/backend/web/templates/event_partials/event_matchstat_table.html
+++ b/src/backend/web/templates/event_partials/event_matchstat_table.html
@@ -56,11 +56,10 @@
             $("#dropdown_{{ component_id }}").click(function(e) {
                e.preventDefault();
                buildCoprTable("{{ component }}");
-               console.log("{{ component }}")
             });
         {% endfor %}
 
-        buildCoprTable("OPRs");
+        buildCoprTable("oprs");
     });
 </script>
 
