Fix py3 not loading liveevent JS

--- a/src/backend/web/templates/event_details.html
+++ b/src/backend/web/templates/event_details.html
@@ -451,6 +451,6 @@
 
 {% block inline_javascript %}
 {% if event.now %}
-<script type="text/javascript" src="/javascript/liveevent.min.js"></script>
+<script type="text/javascript" src="/py3_javascript/liveevent.min.js"></script>
 {% endif %}
 {% endblock %}
