--- a/src/backend/web/templates/index/index_champs.html
+++ b/src/backend/web/templates/index/index_champs.html
@@ -98,5 +98,5 @@
 {% endblock %}
 
 {% block inline_javascript %}
-<script type="text/javascript" src="/javascript/liveevent.min.js"></script>
+<script type="text/javascript" src="/py3_javascript/liveevent.min.js"></script>
 {% endblock %}
