--- a/src/backend/web/templates/gameday2.html
+++ b/src/backend/web/templates/gameday2.html
@@ -37,7 +37,7 @@
 {% block main_javascript %}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/5.10.2/video.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-hls/3.0.2/videojs-contrib-hls.min.js"></script>
-  <script type="text/javascript" src="javascript/gameday2.min.js"></script>
+  <script type="text/javascript" src="py3_javascript/gameday2.min.js"></script>
 {% endblock %}
 
 {% block ganalytics_timer %}
