Adds Firebase Auth emulator

--- a/src/backend/web/static/css/less_css/less/tba/tba_base.less
+++ b/src/backend/web/static/css/less_css/less/tba/tba_base.less
@@ -136,8 +136,7 @@ body {
 }
 
 .tba-auth-text {
-  font-family: "Roboto Medium";
-  margin-left: -18px;
+  margin-left: -18px;  // To offset for icon
 }
 
 .tba-auth-text-google {
