--- a/src/backend/web/templates/account_login_required.html
+++ b/src/backend/web/templates/account_login_required.html
@@ -5,8 +5,14 @@
 {% block meta_description %}Login Required{% endblock %}
 
 {% block inline_javascript %}
+<script src="//gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 <script src="/py3_javascript/tba_combined_js.firebase.min.js"></script>
-<script src="//gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
+<script>
+  // Setup auth emulator host if passed
+  if ({{ auth_emulator_host|tojson }}) {
+    auth.useEmulator("http://" + {{ auth_emulator_host|tojson }});
+  }
+</script>
 {% endblock %}
 
 {% block content %}
