--- a/src/backend/web/templates/react-eventwizard.html
+++ b/src/backend/web/templates/react-eventwizard.html
@@ -1,15 +1,12 @@
 {% extends "base.html" %}
 
 {% block title %}TBA EventWizard{% endblock %}
-{% block main_style %}
-  <link rel="stylesheet" href="/css/tba_combined_style.main.min.css"/>
-{% endblock %}
 
 {% block content %}
   <div id="content"></div>
 {% endblock %}
 
 {% block inline_javascript %}
-  <script type="text/javascript" src="/javascript/eventwizard.min.js"></script>
+  <script type="text/javascript" src="/py3_javascript/eventwizard.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.14.0/xlsx.full.min.js"></script>
 {% endblock %}
