Move inlined styles to dedicated classes

--- a/src/backend/web/static/css/less_css/less/tba/tba_event_page.less
+++ b/src/backend/web/static/css/less_css/less/tba/tba_event_page.less
@@ -32,3 +32,19 @@ tr td.bluescorecell {
   color: #fff;
   background: #2222cc;
 }
+
+@media (min-width: 768px) {
+  .pull-right-not-xs {
+    text-align: right;
+  }
+}
+
+.bottomless {
+  padding-bottom: 0;
+  margin-bottom: 0
+}
+
+.topless {
+  padding-top: 0;
+  margin-top: 0
+}
