--- a/src/backend/web/templates/team_partials/team_info.html
+++ b/src/backend/web/templates/team_partials/team_info.html
@@ -28,6 +28,7 @@
       {% if team.rookie_year %}<span class="glyphicon glyphicon-calendar"></span> <span id="team-rookie-year">Rookie Year: {{ team.rookie_year }}</span><br>{% endif %}
       {% if last_competed and last_competed < max_year %}<span class="glyphicon glyphicon-time"></span> <span id="team-last-competed">Last competed in {{ last_competed }}</span><br>{% endif %}
       {% if team.website %}<span class="glyphicon glyphicon-globe"></span> <a id="team-website" href="{{team.website}}" target="_blank">{{ team.website }}</a><br>{% endif %}
+      <span class="glyphicon glyphicon-link"></span> Details on <a href="https://frc-events.firstinspires.org/team/{{team.team_number}}">firstinspires.org</a><br>
       {% if team.championship_location and team.championship_location[year] %}<span class="glyphicon glyphicon-flag"></span> <span id="team-home-cmp">Home Championship: {{team.championship_location[year]}}</span><br>{% endif %}
       {% if hof.is_hof %}<span id="team-hof" class="hall-of-fame"><span class="glyphicon glyphicon-certificate"></span> Hall of Fame ({% for year in hof.years %}{{ year }}{{ ", " if not loop.last }}{% endfor %}){% if hof.media.video or hof.media.presentation or hof.media.essay %}:{% endif %}{% if hof.media.video %} <a href="{{hof.media.video}}">Video</a>{% endif %}{% if hof.media.presentation %}, <a href="{{hof.media.presentation}}">Presentation</a>{% endif %}{% if hof.media.essay %}, <a href="{{hof.media.essay}}">Essay</a>{% endif %}</span><br>{% endif %}
       {% if year %}
