Move FRC Events attribution link to remove confusion between FIRST Inspires link

--- a/src/backend/web/templates/base.html
+++ b/src/backend/web/templates/base.html
@@ -114,6 +114,7 @@
   <div class="row">
     <div class="col-sm-12 footer-separator">
       <hr>
+      {% block footer_content %}{% endblock %}
     </div>
     <div class="col-sm-6 col-sm-offset-3 col-md-offset-3 col-lg-offset-3">
       <div style="overflow: hidden;">
