--- a/src/backend/web/templates/admin/base.html
+++ b/src/backend/web/templates/admin/base.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Admin Console for The Blue Alliance">
 
     <!-- Le styles -->
-    <link href="/css/tba_combined_style.main.min.css" rel="stylesheet">
+    <link href="/py3_css/tba_combined_style.main.min.css" rel="stylesheet">
     <link href="//cdnjs.cloudflare.com/ajax/libs/featherlight/1.3.5/featherlight.min.css" rel="stylesheet">
     <link href="//cdnjs.cloudflare.com/ajax/libs/featherlight/1.3.5/featherlight.gallery.min.css" rel="stylesheet">
 
@@ -28,7 +28,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/highcharts/3.0.2/modules/exporting.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/featherlight/1.3.5/featherlight.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/featherlight/1.3.5/featherlight.gallery.min.js"></script>
-    <script src="/javascript/tba_combined_js.main.min.js"></script>
+    <script src="/py3_javascript/tba_combined_js.main.min.js"></script>
     {% block head_javascript %}{% endblock %}
   </head>
 
@@ -54,7 +54,7 @@
         <div class="navbar-collapse collapse tba-navbar-collapse tba-collapse navbar-responsive-collapse">
           <br class="visible-xs">
           <p class="navbar-text pull-right">
-            Logged in as <a href="#" class="navbar-link">{{ user_bundle.account.display_name }}</a> || <a href="/logout">log out</a>
+            Logged in as <a href="#" class="navbar-link">{{ user.display_name }}</a> || <a href="/logout">log out</a>
           </p>
           <ul class="nav navbar-nav tba-navbar-nav">
             <!-- Nothing here yet -->
