--- a/src/backend/web/templates/admin/sitevar_edit.html
+++ b/src/backend/web/templates/admin/sitevar_edit.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "admin/base.html" %}
 
-{% block title %}Sitevar {{sitevar.key.id}} - Edit{% endblock %}
+{% block title %}Sitevar {{sitevar.key.id()}} - Edit{% endblock %}
 
 {% block content %}
 
@@ -10,13 +10,14 @@
 </div>
 {% endif %}
 
-<h1>Edit sitevar {{ sitevar.key.id }}</h1>
+<h1>Edit sitevar {{ sitevar.key.id() }}</h1>
 
-<form action="/admin/sitevar/edit/{{sitevar.key.id}}" method="post">
+<form action="/admin/sitevar/edit/{{sitevar.key.id()}}" method="post">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
     <table class="table table-striped table-hover table-condensed">
         <tr>
             <td>Key</td>
-            <td><input type="text" name="disabled_key" value="{{sitevar.key.id}}" disabled="disabled" /><input type="hidden" name="key" value="{{sitevar.key.id}}" /></td>
+            <td><input type="text" name="disabled_key" value="{{sitevar.key.id()}}" disabled="disabled" /><input type="hidden" name="key" value="{{sitevar.key.id()}}" /></td>
         </tr>
         <tr>
             <td>Description</td>
